// Vitest Snapshot v1

exports[`Rate > Rate actionVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-demo-block"
    data-v-c310730a=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        只可选全星时
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="rate-demo-cell space"
        data-v-c310730a=""
      >
        <div
          class="rate-demo-cell__label"
        >
          点击或滑动
        </div>
        
        <div
          class="t-rate"
          data-v-c310730a=""
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 24px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
            />
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-c310730a=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        可选半星时
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="rate-demo-cell space"
        data-v-c310730a=""
      >
        <div
          class="rate-demo-cell__label"
        >
          点击或滑动
        </div>
        
        <div
          class="t-rate"
          data-v-c310730a=""
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 24px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
            />
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      
    </div>
  </div>
  
</div>
`;

exports[`Rate > Rate baseVue demo works fine 1`] = `
<div
  class="rate-demo-cell"
>
  <div
    class="rate-demo-cell__label"
  >
    实心评分
  </div>
  
  <div
    class="t-rate"
  >
    <div
      class="t-rate__wrapper"
      style="font-size: 24px;"
    >
      
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
        style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
        style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
        style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
        style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
        style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
      />
      
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  
</div>
`;

exports[`Rate > Rate colorVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="rate-demo-cell space"
    data-v-2d3c8e2e=""
  >
    <div
      class="rate-demo-cell__label"
    >
      填充评分
    </div>
    
    <div
      class="t-rate"
      data-v-2d3c8e2e=""
    >
      <div
        class="t-rate__wrapper"
        style="font-size: 24px;"
      >
        
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #FFC51C; --td-rate-unselected-color: #E8E8E8;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #FFC51C; --td-rate-unselected-color: #E8E8E8;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #FFC51C; --td-rate-unselected-color: #E8E8E8;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #FFC51C; --td-rate-unselected-color: #E8E8E8;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #FFC51C; --td-rate-unselected-color: #E8E8E8;"
        />
        
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="rate-demo-cell space"
    data-v-2d3c8e2e=""
  >
    <div
      class="rate-demo-cell__label"
    >
      线描评分
    </div>
    
    <div
      class="t-rate"
      data-v-2d3c8e2e=""
    >
      <div
        class="t-rate__wrapper"
        style="font-size: 24px;"
      >
        
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #00A870;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #00A870;"
        />
        <i
          class="t-icon t-icon-star t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #00A870;"
        />
        <i
          class="t-icon t-icon-star t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #00A870;"
        />
        <i
          class="t-icon t-icon-star t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #00A870;"
        />
        
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    
  </div>
  
</div>
`;

exports[`Rate > Rate countVue demo works fine 1`] = `
<div
  class="rate-demo-cell"
>
  <div
    class="rate-demo-cell__label"
  >
    自定义评分数量
  </div>
  
  <div
    class="t-rate"
  >
    <div
      class="t-rate__wrapper"
      style="font-size: 24px;"
    >
      
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
        style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
        style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
        style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
      />
      
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  
</div>
`;

exports[`Rate > Rate customVue demo works fine 1`] = `
<div
  class="rate-demo-cell"
>
  <div
    class="rate-demo-cell__label"
  >
    自定义评分
  </div>
  
  <div
    class="t-rate"
  >
    <div
      class="t-rate__wrapper"
      style="font-size: 24px;"
    >
      
      <i
        class="t-icon t-icon-thumb-up t-rate__icon t-rate__icon--selected"
        style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-thumb-up t-rate__icon t-rate__icon--selected"
        style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-thumb-up t-rate__icon t-rate__icon--selected"
        style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-thumb-up t-rate__icon t-rate__icon--unselected"
        style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-thumb-up t-rate__icon t-rate__icon--unselected"
        style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
      />
      
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  
</div>
`;

exports[`Rate > Rate mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Rate 评分
  </h1>
  <p
    class="summary"
  >
    用于对某行为/事物进行打分。
  </p>
  <br />
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        实心评分
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="rate-demo-cell"
      >
        <div
          class="rate-demo-cell__label"
        >
          实心评分
        </div>
        
        <div
          class="t-rate"
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 24px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
            />
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        自定义评分
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="rate-demo-cell"
      >
        <div
          class="rate-demo-cell__label"
        >
          自定义评分
        </div>
        
        <div
          class="t-rate"
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 24px;"
          >
            
            <i
              class="t-icon t-icon-thumb-up t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-thumb-up t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-thumb-up t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-thumb-up t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-thumb-up t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
            />
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        自定义评分数量
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="rate-demo-cell"
      >
        <div
          class="rate-demo-cell__label"
        >
          自定义评分数量
        </div>
        
        <div
          class="t-rate"
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 24px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
            />
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        带描述评分
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="rate-demo-cell space"
        data-v-09fb5248=""
      >
        <div
          class="rate-demo-cell__label"
        >
          带描述评分
        </div>
        
        <div
          class="t-rate"
          data-v-09fb5248=""
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 24px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
            />
            
          </div>
          <span
            class="t-rate__text t-rate__text--active"
          >
            一般
          </span>
          <!--v-if-->
        </div>
        
      </div>
      <div
        class="rate-demo-cell space"
        data-v-09fb5248=""
      >
        <div
          class="rate-demo-cell__label"
        >
          带描述评分
        </div>
        
        <div
          class="t-rate"
          data-v-09fb5248=""
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 24px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
            />
            
          </div>
          <span
            class="t-rate__text t-rate__text--active"
          >
            5 分
          </span>
          <!--v-if-->
        </div>
        
      </div>
      <div
        class="rate-demo-cell space"
        data-v-09fb5248=""
      >
        <div
          class="rate-demo-cell__label"
        >
          带描述评分
        </div>
        
        <div
          class="t-rate"
          data-v-09fb5248=""
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 24px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
            />
            
          </div>
          <span
            class="t-rate__text"
          />
          <!--v-if-->
        </div>
        
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <!--v-if-->
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="tdesign-mobile-demo-block"
        data-v-c310730a=""
      >
        <div
          class="tdesign-mobile-demo-block__header"
        >
          <!--v-if-->
          <p
            class="tdesign-mobile-demo-block__summary"
          >
            只可选全星时
          </p>
        </div>
        <div
          class="tdesign-mobile-demo-block__slot"
        >
          
          <div
            class="rate-demo-cell space"
            data-v-c310730a=""
          >
            <div
              class="rate-demo-cell__label"
            >
              点击或滑动
            </div>
            
            <div
              class="t-rate"
              data-v-c310730a=""
            >
              <div
                class="t-rate__wrapper"
                style="font-size: 24px;"
              >
                
                <i
                  class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
                  style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
                />
                <i
                  class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
                  style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
                />
                <i
                  class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
                  style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
                />
                <i
                  class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
                  style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
                />
                <i
                  class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
                  style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
                />
                
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
            
          </div>
          
        </div>
      </div>
      <div
        class="tdesign-mobile-demo-block"
        data-v-c310730a=""
      >
        <div
          class="tdesign-mobile-demo-block__header"
        >
          <!--v-if-->
          <p
            class="tdesign-mobile-demo-block__summary"
          >
            可选半星时
          </p>
        </div>
        <div
          class="tdesign-mobile-demo-block__slot"
        >
          
          <div
            class="rate-demo-cell space"
            data-v-c310730a=""
          >
            <div
              class="rate-demo-cell__label"
            >
              点击或滑动
            </div>
            
            <div
              class="t-rate"
              data-v-c310730a=""
            >
              <div
                class="t-rate__wrapper"
                style="font-size: 24px;"
              >
                
                <i
                  class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
                  style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
                />
                <i
                  class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
                  style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
                />
                <i
                  class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
                  style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
                />
                <i
                  class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
                  style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
                />
                <i
                  class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
                  style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
                />
                
              </div>
              <!--v-if-->
              <!--v-if-->
            </div>
            
          </div>
          
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        评分大小
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="rate-demo-cell space"
        data-v-c926dbf4=""
      >
        <div
          class="rate-demo-cell__label"
        >
          大尺寸 24
        </div>
        
        <div
          class="t-rate"
          data-v-c926dbf4=""
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 24px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
            />
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      <div
        class="rate-demo-cell space"
        data-v-c926dbf4=""
      >
        <div
          class="rate-demo-cell__label"
        >
          小尺寸 20
        </div>
        
        <div
          class="t-rate"
          data-v-c926dbf4=""
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 20px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
            />
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        设置评分颜色
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="rate-demo-cell space"
        data-v-2d3c8e2e=""
      >
        <div
          class="rate-demo-cell__label"
        >
          填充评分
        </div>
        
        <div
          class="t-rate"
          data-v-2d3c8e2e=""
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 24px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #FFC51C; --td-rate-unselected-color: #E8E8E8;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #FFC51C; --td-rate-unselected-color: #E8E8E8;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #FFC51C; --td-rate-unselected-color: #E8E8E8;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #FFC51C; --td-rate-unselected-color: #E8E8E8;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #FFC51C; --td-rate-unselected-color: #E8E8E8;"
            />
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      <div
        class="rate-demo-cell space"
        data-v-2d3c8e2e=""
      >
        <div
          class="rate-demo-cell__label"
        >
          线描评分
        </div>
        
        <div
          class="t-rate"
          data-v-2d3c8e2e=""
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 24px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #00A870;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #00A870;"
            />
            <i
              class="t-icon t-icon-star t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #00A870;"
            />
            <i
              class="t-icon t-icon-star t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #00A870;"
            />
            <i
              class="t-icon t-icon-star t-rate__icon t-rate__icon--unselected"
              style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #00A870;"
            />
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        04 特殊样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        竖向带描述评分
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="rate-demo-cell space"
        data-v-be893878=""
      >
        <!--v-if-->
        
        <div
          class="t-rate"
          data-v-be893878=""
        >
          <div
            class="t-rate__wrapper"
            style="font-size: 30px;"
          >
            
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
              style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
            />
            <i
              class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
              style="margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
            />
            
          </div>
          <!--v-if-->
          <!--v-if-->
        </div>
        <div
          class="desc desc--{{value > 3 ? 'active' : ''}}"
          data-v-be893878=""
        >
          可以前往
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Rate > Rate showTextVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="rate-demo-cell space"
    data-v-09fb5248=""
  >
    <div
      class="rate-demo-cell__label"
    >
      带描述评分
    </div>
    
    <div
      class="t-rate"
      data-v-09fb5248=""
    >
      <div
        class="t-rate__wrapper"
        style="font-size: 24px;"
      >
        
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
        />
        
      </div>
      <span
        class="t-rate__text t-rate__text--active"
      >
        一般
      </span>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="rate-demo-cell space"
    data-v-09fb5248=""
  >
    <div
      class="rate-demo-cell__label"
    >
      带描述评分
    </div>
    
    <div
      class="t-rate"
      data-v-09fb5248=""
    >
      <div
        class="t-rate__wrapper"
        style="font-size: 24px;"
      >
        
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
        />
        
      </div>
      <span
        class="t-rate__text t-rate__text--active"
      >
        5 分
      </span>
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="rate-demo-cell space"
    data-v-09fb5248=""
  >
    <div
      class="rate-demo-cell__label"
    >
      带描述评分
    </div>
    
    <div
      class="t-rate"
      data-v-09fb5248=""
    >
      <div
        class="t-rate__wrapper"
        style="font-size: 24px;"
      >
        
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
        />
        
      </div>
      <span
        class="t-rate__text"
      />
      <!--v-if-->
    </div>
    
  </div>
  
</div>
`;

exports[`Rate > Rate sizeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="rate-demo-cell space"
    data-v-c926dbf4=""
  >
    <div
      class="rate-demo-cell__label"
    >
      大尺寸 24
    </div>
    
    <div
      class="t-rate"
      data-v-c926dbf4=""
    >
      <div
        class="t-rate__wrapper"
        style="font-size: 24px;"
      >
        
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="font-size: 24px; margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
        />
        
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    
  </div>
  <div
    class="rate-demo-cell space"
    data-v-c926dbf4=""
  >
    <div
      class="rate-demo-cell__label"
    >
      小尺寸 20
    </div>
    
    <div
      class="t-rate"
      data-v-c926dbf4=""
    >
      <div
        class="t-rate__wrapper"
        style="font-size: 20px;"
      >
        
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
          style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
        />
        <i
          class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
          style="margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
        />
        
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    
  </div>
  
</div>
`;

exports[`Rate > Rate specialVue demo works fine 1`] = `
<div
  class="rate-demo-cell space"
  data-v-be893878=""
>
  <!--v-if-->
  
  <div
    class="t-rate"
    data-v-be893878=""
  >
    <div
      class="t-rate__wrapper"
      style="font-size: 30px;"
    >
      
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
        style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
        style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
        style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--selected"
        style="margin-right: 4px; --td-rate-selected-color: #ED7B2F;"
      />
      <i
        class="t-icon t-icon-star-filled t-rate__icon t-rate__icon--unselected"
        style="margin-right: 0px; --td-rate-selected-color: #ED7B2F;"
      />
      
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div
    class="desc desc--{{value > 3 ? 'active' : ''}}"
    data-v-be893878=""
  >
    可以前往
  </div>
  
</div>
`;
